# malduck

./: README.md  requirements.txt  setup.cfg  setup.py
malduck/: __init__.py  main.py
malduck-mwcfg/: .gitignore  CONTRIBUTING.md  COPY_INSTRUCTIONS.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WELCOME.txt  copy_all.sh  copy_files.py  pyproject.toml  requirements.txt  setup.py
malduck-mwcfg/malduck/extractor/: config_builder.py  config_utils.py  extract_manager.py
malduck-mwcfg/malduck/procmem/: procmem.py  procmem.pyi
malduck-mwcfg/modules/: README.md  __init__.py
malduck-mwcfg/tests/: test_execute.py
malduck/extractor/: config_utils.py  extract_manager.py
malduck/procmem/: binmem.py  procmem.py  procmem.pyi
malduck/yara/: __init__.py  mapping.py  yara.py  yara.pyi
tests/: test_disasm.py  test_procmem.py
